unpackaged/main/default/objects/Contact/fields/Academy_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Academy_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Academy</label>
    <type>Checkbox</type>
</CustomField>