unpackaged/main/default/objects/Contact/fields/Academy_Vendors_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Academy_Vendors_Marketing__c</fullName>
    <label>Academy Vendors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Academy_Marketing__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Majenta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>