unpackaged/main/default/objects/Contact/fields/Account_VMC__c.field-meta.xml
<CustomField>
    <fullName>Account_VMC__c</fullName>
    <formula>Account.JLR_GSDB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account VMC</label>
    <type>Text</type>
</CustomField>