unpackaged/main/default/objects/Contact/fields/AlwaysOne__c.field-meta.xml
<CustomField>
    <fullName>AlwaysOne__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AlwaysOne</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>