unpackaged/main/default/objects/Contact/fields/CAD_Systems_Used__c.field-meta.xml
<CustomField>
    <fullName>CAD_Systems_Used__c</fullName>
    <label>CAD Systems Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autodesk</fullName>
            </value>
            <value>
                <fullName>Dassault Systemes</fullName>
            </value>
            <value>
                <fullName>Solidworks</fullName>
            </value>
            <value>
                <fullName>Rhino</fullName>
            </value>
            <value>
                <fullName>OnShape</fullName>
            </value>
            <value>
                <fullName>PTC</fullName>
            </value>
            <value>
                <fullName>Siemens</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>