unpackaged/main/default/objects/Contact/fields/CommunityUserProfileNameAuto__c.field-meta.xml
<CustomField>
    <fullName>CommunityUserProfileNameAuto__c</fullName>
    <formula>Community_User__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community User Profile Name</label>
    <type>Text</type>
</CustomField>