unpackaged/main/default/objects/Contact/fields/ContactCasesafeID__c.field-meta.xml
<CustomField>
    <fullName>ContactCasesafeID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact CasesafeID</label>
    <type>Text</type>
</CustomField>