unpackaged/main/default/objects/Contact/fields/Created_By_Profile__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Profile__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Profile</label>
    <type>Text</type>
</CustomField>