unpackaged/main/default/objects/Contact/fields/CustomerPortalContact__c.field-meta.xml
<CustomField>
    <fullName>CustomerPortalContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Portal Contact</label>
    <type>Checkbox</type>
</CustomField>