unpackaged/main/default/objects/Contact/fields/Data_Services_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Data_Services_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Services</label>
    <type>Checkbox</type>
</CustomField>