unpackaged/main/default/objects/Contact/fields/Data_Services_Vendors_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Data_Services_Vendors_Marketing__c</fullName>
    <label>Data Services Vendors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C3P</fullName>
            </value>
            <value>
                <fullName>V3P</fullName>
            </value>
            <value>
                <fullName>Majenta</fullName>
            </value>
            <value>
                <fullName>FTP</fullName>
            </value>
            <value>
                <fullName>Leapfile</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>Hightail</fullName>
            </value>
            <value>
                <fullName>Wetransfer</fullName>
            </value>
            <value>
                <fullName>Sharefile</fullName>
            </value>
            <value>
                <fullName>Google Drive</fullName>
            </value>
            <value>
                <fullName>Grabcad</fullName>
            </value>
            <value>
                <fullName>Simplicity</fullName>
            </value>
            <value>
                <fullName>Using Email</fullName>
            </value>
            <value>
                <fullName>USB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>