unpackaged/main/default/objects/Contact/fields/Delete__c.field-meta.xml
<CustomField>
    <fullName>Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Non visible field updated by button distributed flow to GSI team to remove enerjyhub Contacts - this team do not have delete permission to this and related dependent objects</description>
    <inlineHelpText>Do not check manually this will result in contact being deleted by a process</inlineHelpText>
    <label>Delete?</label>
    <type>Checkbox</type>
</CustomField>