unpackaged/main/default/objects/Contact/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts/Finance</fullName>
            </value>
            <value>
                <fullName>Capital Projects</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Engineering - Hardware</fullName>
            </value>
            <value>
                <fullName>Engineering - Software</fullName>
            </value>
            <value>
                <fullName>Estates</fullName>
            </value>
            <value>
                <fullName>Facilities Management</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Senior Management</fullName>
            </value>
            <value>
                <fullName>Sustainability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>