unpackaged/main/default/objects/Contact/fields/DQScorePerc__c.field-meta.xml
<CustomField>
    <fullName>DQScorePerc__c</fullName>
    <formula>((
    if(isblank(FirstName),0,0.5)
  + if(isblank(LastName),0,0.5) 
  + if(isblank(Title),0,0.5) 
  + if(isblank(Email),0,2) 
  + if(EmailBounced__c,-2,0) 
  + if(isblank(Phone),0,2)
  + if(isblank(TEXT(Department__c)),0,1)
  + if(isblank(TEXT(Role__c)),0,1)
  + if(Marketing_Exclude__c,2,
        if(or(
          IT_Marketing__c,
          Software_Marketing__c,
          Data_Services_Marketing__c,
          Academy_Marketing__c,
          PLM_Marketing__c)
        ,2,0) 
     )
) / 9.5 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Quality Score Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>