unpackaged/main/default/objects/Contact/fields/Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Status__c</fullName>
    <formula>IF( Email = "", "No Address",
  IF( EmailBounced__c , "Bounced",
    IF( HasOptedOutOfEmail , "Unsubscribed",  
      IF( Marketing_Exclude__c , "Excluded", "Okay")
    ) 
  )
)</formula>
    <label>Email Status</label>
    <type>Text</type>
</CustomField>