unpackaged/main/default/objects/Contact/fields/EmailBounced__c.field-meta.xml
<CustomField>
    <fullName>EmailBounced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked this means the current email address bounced the last time an email was sent to it. To clear this field please update the email address.</inlineHelpText>
    <label>Email Bounced</label>
    <type>Checkbox</type>
</CustomField>