unpackaged/main/default/objects/Contact/fields/EmailChanged__c.field-meta.xml
<CustomField>
    <fullName>EmailChanged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be automatically ticked when a contact email has changed within the last 24hours.</description>
    <inlineHelpText>This checkbox will be automatically ticked when a contact email has changed within the last 24hours.</inlineHelpText>
    <label>Email Changed?</label>
    <type>Checkbox</type>
</CustomField>