unpackaged/main/default/objects/Contact/fields/Enable_for_Community__c.field-meta.xml
<CustomField>
    <fullName>Enable_for_Community__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Contact enabled for Community</description>
    <inlineHelpText>Is Contact enabled for Community</inlineHelpText>
    <label>Enable for Community</label>
    <type>Checkbox</type>
</CustomField>