unpackaged/main/default/objects/Contact/fields/EnerjyhubEscalationDemotionDate_c__c.field-meta.xml
<CustomField>
    <fullName>EnerjyhubEscalationDemotionDate_c__c</fullName>
    <description>The date that a SIM will be demoted to Standard User Profile at the end of the Escalation process</description>
    <inlineHelpText>SIM Demotion Date (enerjyhub Escalation)</inlineHelpText>
    <label>enerjyhub Escalation Demotion Date</label>
    <type>Date</type>
</CustomField>