unpackaged/main/default/objects/Contact/fields/EnerjyhubEscalationEmail1SentDate__c.field-meta.xml
<CustomField>
    <fullName>EnerjyhubEscalationEmail1SentDate__c</fullName>
    <description>Displays the most recent date if the first enerjyhub escalation has been sent by Pardot (Date populated by Pardot)</description>
    <inlineHelpText>Date the first enerjyhub escalation email was most recently sent to this contact</inlineHelpText>
    <label>enerjyhub Escalation Email 1 Sent</label>
    <type>Date</type>
</CustomField>