unpackaged/main/default/objects/Contact/fields/EnerjyhubEscalationEmail2SentDate__c.field-meta.xml
<CustomField>
    <fullName>EnerjyhubEscalationEmail2SentDate__c</fullName>
    <description>Displays the most recent date if the second enerjyhub escalation has been sent by Pardot (Date populated by Pardot)</description>
    <inlineHelpText>Date the second enerjyhub escalation email was most recently sent to this contact</inlineHelpText>
    <label>enerjyhub Escalation Email 2 Sent</label>
    <type>Date</type>
</CustomField>