unpackaged/main/default/objects/Contact/fields/enerjyhubUsername__c.field-meta.xml
<CustomField>
    <fullName>enerjyhubUsername__c</fullName>
    <description>This field will show the enerjyhub username for this contact. Note: This will only populate if the community user is active.</description>
    <formula>IF( Community_User__r.IsActive = TRUE,  Community_User__r.Username,"")</formula>
    <inlineHelpText>This field will show the enerjyhub username for this contact. Note: This will only populate if the community user is active.</inlineHelpText>
    <label>enerjyhub Username</label>
    <type>Text</type>
</CustomField>