unpackaged/main/default/objects/Contact/fields/Has_JLR_SAM_profile__c.field-meta.xml
<CustomField>
    <fullName>Has_JLR_SAM_profile__c</fullName>
    <description>Checkbox that identifies is a contact is associated to a JLR SAM community user</description>
    <formula>IF( Community_User__r.ProfileId = '00e4J000000pX5V', TRUE, FALSE)</formula>
    <inlineHelpText>This checkbox identifies whether this contact is associated to a JLR SAM Community User</inlineHelpText>
    <label>Has JLR SAM profile?</label>
    <type>Checkbox</type>
</CustomField>