unpackaged/main/default/objects/Contact/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>Field to identify if the contacts Community is 'Active'. Must have value in 'Community User' field.</description>
    <formula>IF( Community_User__r.IsActive =TRUE,TRUE,FALSE)</formula>
    <inlineHelpText>This checkbox indicates if the contact has an active community user.</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>