unpackaged/main/default/objects/Contact/fields/IsEnableforDassaultCommunity__c.field-meta.xml
<CustomField>
    <fullName>IsEnableforDassaultCommunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this contact require access to the Dassault community?</description>
    <inlineHelpText>Does this contact require access to the Dassault community?</inlineHelpText>
    <label>Enable for Dassault Community</label>
    <type>Checkbox</type>
</CustomField>