unpackaged/main/default/objects/Contact/fields/IsJLRAppUser__c.field-meta.xml
<CustomField>
    <fullName>IsJLRAppUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsJLRAppUser</label>
    <type>Checkbox</type>
</CustomField>