unpackaged/main/default/objects/Contact/fields/IsKnowledgeDisabled__c.field-meta.xml
<CustomField>
    <fullName>IsKnowledgeDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if access to Knowledge in Community has been disabled (used in Page Audience)</description>
    <inlineHelpText>Is Community Access to Knowledge disabled?</inlineHelpText>
    <label>IsKnowledgeDisabled</label>
    <type>Checkbox</type>
</CustomField>