unpackaged/main/default/objects/Contact/fields/IsParentAccountEscalatedAuto__c.field-meta.xml
<CustomField>
    <fullName>IsParentAccountEscalatedAuto__c</fullName>
    <description>Checkbox Formula - Will be checked if the Parent Account is escalated for  not subscribing to enerjyhub</description>
    <formula>IF(Account.IsParentEnerjyhubEscalatedJLRAuto__c,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ticked if Parent Account is escalated for non-subscription to enerjyhub.</inlineHelpText>
    <label>Parent Account enerjyhub Escalated</label>
    <type>Checkbox</type>
</CustomField>