unpackaged/main/default/objects/Contact/fields/IsTest__c.field-meta.xml
<CustomField>
    <fullName>IsTest__c</fullName>
    <description>Field used to identify if record is a test record, looks up to IsTest on the Account</description>
    <formula>IF(Account.IsTest__c, TRUE, FALSE)</formula>
    <inlineHelpText>Will be checked if the Account is a Test Account</inlineHelpText>
    <label>IsTest</label>
    <type>Checkbox</type>
</CustomField>