unpackaged/main/default/objects/Contact/fields/IT_Marketing__c.field-meta.xml
<CustomField>
    <fullName>IT_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT</label>
    <type>Checkbox</type>
</CustomField>