unpackaged/main/default/objects/Contact/fields/JLR_Excellence_ID__c.field-meta.xml
<CustomField>
    <fullName>JLR_Excellence_ID__c</fullName>
    <label>Excellence ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>