unpackaged/main/default/objects/Contact/fields/JLR_FSN_ID__c.field-meta.xml
<CustomField>
    <fullName>JLR_FSN_ID__c</fullName>
    <label>FSN-ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>