unpackaged/main/default/objects/Contact/fields/JLR_Portal_ID__c.field-meta.xml
<CustomField>
    <fullName>JLR_Portal_ID__c</fullName>
    <label>JLR Portal ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>