unpackaged/main/default/objects/Contact/fields/JLR_User_Location_Site_Code__c.field-meta.xml
<CustomField>
    <fullName>JLR_User_Location_Site_Code__c</fullName>
    <label>User Location Site Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>