unpackaged/main/default/objects/Contact/fields/JLRContactIdUnique__c.field-meta.xml
<CustomField>
    <fullName>JLRContactIdUnique__c</fullName>
    <description>Site Code+Email Address - to be used for upsert purposes</description>
    <externalId>true</externalId>
    <label>JLRContactIdUnique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>