unpackaged/main/default/objects/Contact/fields/JLRPortalUser__c.field-meta.xml
<CustomField>
    <fullName>JLRPortalUser__c</fullName>
    <formula>IF(ISBLANK(JLR_Portal_ID__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JLR Portal User</label>
    <type>Checkbox</type>
</CustomField>