unpackaged/main/default/objects/Contact/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <formula>LastActivityDate</formula>
    <label>Last Activity</label>
    <type>Date</type>
</CustomField>