unpackaged/main/default/objects/Contact/fields/LinkedInURL__c.field-meta.xml
<CustomField>
    <fullName>LinkedInURL__c</fullName>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>