unpackaged/main/default/objects/Contact/fields/LogACall__c.field-meta.xml
<CustomField>
    <fullName>LogACall__c</fullName>
    <formula>HYPERLINK(
"/00T/e?title=Call&amp;what_id="+AccountId+"&amp;who_id="+Id+"&amp;followup=1&amp;tsk5=Call&amp;00N20000002gVT8=Not There&amp;00N20000002gVSj=Call&amp;retURL=%2F"+AccountId, 
"Log A Call", "_self")</formula>
    <label>Activities</label>
    <type>Text</type>
</CustomField>