unpackaged/main/default/objects/Contact/fields/Marketing_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Marketing</label>
    <type>Checkbox</type>
</CustomField>