unpackaged/main/default/objects/Contact/fields/MarketingCategory__c.field-meta.xml
<CustomField>
    <fullName>MarketingCategory__c</fullName>
    <label>Marketing Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive Centre of Excellence</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Factory layout and Plant</fullName>
            </value>
            <value>
                <fullName>Industrial Design &amp; Visualisation</fullName>
            </value>
            <value>
                <fullName>Plastics</fullName>
            </value>
            <value>
                <fullName>PLM360</fullName>
            </value>
            <value>
                <fullName>Simulation</fullName>
            </value>
            <value>
                <fullName>Design Automation</fullName>
            </value>
            <value>
                <fullName>BIM</fullName>
            </value>
            <value>
                <fullName>enerjyhub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>