unpackaged/main/default/objects/Contact/fields/Modified_by_Profile__c.field-meta.xml
<CustomField>
    <fullName>Modified_by_Profile__c</fullName>
    <formula>LastModifiedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified by Profile</label>
    <type>Text</type>
</CustomField>