unpackaged/main/default/objects/Contact/fields/MX_Marketing__c.field-meta.xml
<CustomField>
    <fullName>MX_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MX</label>
    <type>Checkbox</type>
</CustomField>