unpackaged/main/default/objects/Contact/fields/MX_Nissan_User__c.field-meta.xml
<CustomField>
    <fullName>MX_Nissan_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MX Nissan User</label>
    <type>Checkbox</type>
</CustomField>