unpackaged/main/default/objects/Contact/fields/MXLastLoginDate__c.field-meta.xml
<CustomField>
    <fullName>MXLastLoginDate__c</fullName>
    <label>MX Last Login Date</label>
    <type>Date</type>
</CustomField>