unpackaged/main/default/objects/Contact/fields/MXOEMPick__c.field-meta.xml
<CustomField>
    <fullName>MXOEMPick__c</fullName>
    <label>MX OEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MX_OEM</valueSetName>
    </valueSet>
</CustomField>