unpackaged/main/default/objects/Contact/fields/MXOEMUserId__c.field-meta.xml
<CustomField>
    <fullName>MXOEMUserId__c</fullName>
    <externalId>true</externalId>
    <label>MXOEMUserId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>