unpackaged/main/default/objects/Contact/fields/MXUser__c.field-meta.xml
<CustomField>
    <fullName>MXUser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MX User</label>
    <type>Checkbox</type>
</CustomField>