unpackaged/main/default/objects/Contact/fields/MXUserId__c.field-meta.xml
<CustomField>
    <fullName>MXUserId__c</fullName>
    <externalId>true</externalId>
    <label>MX User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>