unpackaged/main/default/objects/Contact/fields/NissanCompanyCADSystem__c.field-meta.xml
<CustomField>
    <fullName>NissanCompanyCADSystem__c</fullName>
    <label>Company CAD System</label>
    <length>80</length>
    <type>Text</type>
</CustomField>