unpackaged/main/default/objects/Contact/fields/NissanCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>NissanCompanyCode__c</fullName>
    <label>Company Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>