unpackaged/main/default/objects/Contact/fields/NissanG2BApplicantEmail__c.field-meta.xml
<CustomField>
    <fullName>NissanG2BApplicantEmail__c</fullName>
    <label>G2B Applicant Email</label>
    <type>Email</type>
</CustomField>