unpackaged/main/default/objects/Contact/fields/NissanG2BApplicantName__c.field-meta.xml
<CustomField>
    <fullName>NissanG2BApplicantName__c</fullName>
    <label>G2B Applicant Name</label>
    <length>125</length>
    <type>Text</type>
</CustomField>