unpackaged/main/default/objects/Contact/fields/NissanG2BApproverEmail__c.field-meta.xml
<CustomField>
    <fullName>NissanG2BApproverEmail__c</fullName>
    <label>G2B Approver Email</label>
    <type>Email</type>
</CustomField>