unpackaged/main/default/objects/Contact/fields/NissanG2BApproverName__c.field-meta.xml
<CustomField>
    <fullName>NissanG2BApproverName__c</fullName>
    <label>G2B Approver Name</label>
    <length>125</length>
    <type>Text</type>
</CustomField>