unpackaged/main/default/objects/Contact/fields/NissanTCP2UserLogin__c.field-meta.xml
<CustomField>
    <fullName>NissanTCP2UserLogin__c</fullName>
    <label>TCP2 User Login (if applicable)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>