unpackaged/main/default/objects/Contact/fields/NissanTeamcenterSiteID__c.field-meta.xml
<CustomField>
    <fullName>NissanTeamcenterSiteID__c</fullName>
    <label>Teamcenter Site ID (if applicable)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>