unpackaged/main/default/objects/Contact/fields/Onsite_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Engineer__c</fullName>
    <label>On/Off JLR site?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On JLR Site</fullName>
            </value>
            <value>
                <fullName>Off JLR Site</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <isActive>false</isActive>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>