unpackaged/main/default/objects/Contact/fields/ParentAccountEscalationDateAuto__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountEscalationDateAuto__c</fullName>
    <description>Date the Parent Account was escalated</description>
    <formula>Account.Parent.enerjyhubEscalationDateTrig__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Parent Account Escalation Date</inlineHelpText>
    <label>Parent Account Escalation Date</label>
    <type>Date</type>
</CustomField>