unpackaged/main/default/objects/Contact/fields/ParentAccountIdAuto__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountIdAuto__c</fullName>
    <description>Formula to store the Parent Account Id (2 levels up from contact)</description>
    <formula>Account.Parent.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Parent Account ID</inlineHelpText>
    <label>ParentAccountId</label>
    <type>Text</type>
</CustomField>