unpackaged/main/default/objects/Contact/fields/PickEnerjyhubAccess__c.field-meta.xml
<CustomField>
    <fullName>PickEnerjyhubAccess__c</fullName>
    <description>Picklist to define enerjyhub user access catergory
Active in enerjyhub: active user
Inactive in enerjyhub: not currently using enerjyhub still able to re activate. Inactive still consumes a licence
Delete from enerjyhub: user no longer requires access and and cannot be reactivated</description>
    <inlineHelpText>ACTIVE: User is actively using enerjyhub.
INACTIVE: User works for the company but does not require access at this moment in time.
DELETE FROM ENERJYHUB: User no longer works with company and does not require access to enerjyhub.</inlineHelpText>
    <label>enerjyhub Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active in enerjyhub</fullName>
            </value>
            <value>
                <fullName>Inactive in enerjyhub</fullName>
            </value>
            <value>
                <fullName>Delete from enerjyhub</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Disable</fullName>
                <isActive>false</isActive>
                <label>Disable</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <isActive>false</isActive>
                <label>Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>