unpackaged/main/default/objects/Contact/fields/PLM_Marketing__c.field-meta.xml
<CustomField>
    <fullName>PLM_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PLM</label>
    <type>Checkbox</type>
</CustomField>