unpackaged/main/default/objects/Contact/fields/PLM_Vendors_Marketing__c.field-meta.xml
<CustomField>
    <fullName>PLM_Vendors_Marketing__c</fullName>
    <label>PLM Vendors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>PLM_Marketing__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Siemens</fullName>
            </value>
            <value>
                <fullName>Solid Edge</fullName>
            </value>
            <value>
                <fullName>Dassault</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>