unpackaged/main/default/objects/Contact/fields/Primary_Community_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Community_Contact__c</fullName>
    <formula>Community_User__r.ContactId = Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Community Contact</label>
    <type>Checkbox</type>
</CustomField>