unpackaged/main/default/objects/Contact/fields/PrimaryUserContact__c.field-meta.xml
<CustomField>
    <fullName>PrimaryUserContact__c</fullName>
    <description>Link to Primary User Contact  for this Contact (JLR enerjyhub)</description>
    <formula>IF(ISBLANK(Community_User__c)  ||  !IsActive__c ,"N/A",
HYPERLINK("/" &amp; Community_User__r.ContactId,"Click here")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click here for the Primary User Contact (to login as the user)</inlineHelpText>
    <label>Primary User Contact</label>
    <type>Text</type>
</CustomField>